add s19 target and use it for dfu
when calling dfuse-pack to generate from ihex, it requires an additional python
module, that is not convenient when you want to install the script just by
putting it in your $PATH

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -23,7 +23,7 @@ cmsis_stm32_target(example-f042
     DEVICE STM32F042x6
     VERSION 20240709193138
     LINKER_SCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/STM32F042K6Tx_FLASH.ld
-    ADDITIONAL_OUTPUTS BIN MAP IHEX DFU
+    ADDITIONAL_OUTPUTS BIN MAP IHEX DFU S19
     SHOW_SIZE ON
     STLINK ON
     INSTALL ON
@@ -51,7 +51,7 @@ cmsis_stm32_target(example-g431
     DEVICE STM32G431xx
     VERSION 20240709193138
     LINKER_SCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/STM32G431KBTx_FLASH.ld
-    ADDITIONAL_OUTPUTS BIN MAP IHEX DFU
+    ADDITIONAL_OUTPUTS BIN MAP IHEX DFU S19
     SHOW_SIZE ON
     STLINK ON
     INSTALL ON
